Fix overflow issue

--- a/base/static/base/css/style.sass
+++ b/base/static/base/css/style.sass
@@ -425,17 +425,17 @@ body
 .section--portolio
   padding-top: 10rem
 
+  .section__content
+    overflow: visible
+
 .section--portolio .items
   position: relative
-  overflow: initial
+  overflow: visible
   width: 100%
   height: 60vh
 
   @media (min-width: $tablet)
     height: 80vh
-
-  .section__content
-    overflow: initial
 
 .portfolio-item
   position: absolute
